Parser with PLY package/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> prog
Rule 1     prog -> func
Rule 2     prog -> func prog
Rule 3     func -> type var LPAREN flist RPAREN LBRACE body RBRACE
Rule 4     body -> stmt
Rule 5     body -> stmt body
Rule 6     stmt -> expr SEMI_COLON
Rule 7     stmt -> defvar SEMI_COLON
Rule 8     stmt -> IF LPAREN expr RPAREN stmt
Rule 9     stmt -> IF LPAREN expr RPAREN stmt ELSE stmt
Rule 10    stmt -> WHILE LPAREN expr RPAREN stmt
Rule 11    stmt -> FOR LPAREN var IN expr RPAREN stmt
Rule 12    stmt -> RETURN expr SEMI_COLON
Rule 13    stmt -> LBRACE body RBRACE
Rule 14    defvar -> type var
Rule 15    expr -> var LPAREN clist RPAREN
Rule 16    expr -> expr LSQUAREBR expr RSQUAREBR
Rule 17    expr -> expr EQ expr
Rule 18    expr -> expr PLUS expr
Rule 19    expr -> expr MINUS expr
Rule 20    expr -> expr TIMES expr
Rule 21    expr -> expr DIVIDE expr
Rule 22    expr -> expr MOD expr
Rule 23    expr -> expr LESS_THAN expr
Rule 24    expr -> expr GREATER_THAN expr
Rule 25    expr -> expr PARITY expr
Rule 26    expr -> expr NOT_EQ expr
Rule 27    expr -> expr LESS_EQUAL expr
Rule 28    expr -> expr GREATER_EQUAL expr
Rule 29    expr -> expr OR expr
Rule 30    expr -> expr AND expr
Rule 31    expr -> NOT expr
Rule 32    expr -> MINUS expr
Rule 33    expr -> PLUS expr
Rule 34    expr -> LPAREN expr RPAREN
Rule 35    expr -> var
Rule 36    expr -> num
Rule 37    flist -> type var
Rule 38    flist -> type var COMMA flist
Rule 39    flist -> <empty>
Rule 40    clist -> expr
Rule 41    clist -> expr COMMA clist
Rule 42    clist -> <empty>
Rule 43    type -> LIST_LABEL
Rule 44    type -> NUM_LABEL
Rule 45    num -> NUM
Rule 46    var -> VAR

Terminals, with rules where they appear

AND                  : 30
COMMA                : 38 41
DIVIDE               : 21
ELSE                 : 9
EQ                   : 17
FOR                  : 11
GREATER_EQUAL        : 28
GREATER_THAN         : 24
IF                   : 8 9
IN                   : 11
LBRACE               : 3 13
LESS_EQUAL           : 27
LESS_THAN            : 23
LIST_LABEL           : 43
LPAREN               : 3 8 9 10 11 15 34
LSQUAREBR            : 16
MINUS                : 19 32
MOD                  : 22
NOT                  : 31
NOT_EQ               : 26
NUM                  : 45
NUM_LABEL            : 44
OR                   : 29
PARITY               : 25
PLUS                 : 18 33
RBRACE               : 3 13
RETURN               : 12
RPAREN               : 3 8 9 10 11 15 34
RSQUAREBR            : 16
SEMI_COLON           : 6 7 12
TIMES                : 20
VAR                  : 46
WHILE                : 10
error                : 

Nonterminals, with rules where they appear

body                 : 3 5 13
clist                : 15 41
defvar               : 7
expr                 : 6 8 9 10 11 12 16 16 17 17 18 18 19 19 20 20 21 21 22 22 23 23 24 24 25 25 26 26 27 27 28 28 29 29 30 30 31 32 33 34 40 41
flist                : 3 38
func                 : 1 2
num                  : 36
prog                 : 2 0
stmt                 : 4 5 8 9 9 10 11
type                 : 3 14 37 38
var                  : 3 11 14 15 35 37 38

Parsing method: LALR

state 0

    (0) S' -> . prog
    (1) prog -> . func
    (2) prog -> . func prog
    (3) func -> . type var LPAREN flist RPAREN LBRACE body RBRACE
    (43) type -> . LIST_LABEL
    (44) type -> . NUM_LABEL

    LIST_LABEL      shift and go to state 4
    NUM_LABEL       shift and go to state 5

    prog                           shift and go to state 1
    func                           shift and go to state 2
    type                           shift and go to state 3

state 1

    (0) S' -> prog .



state 2

    (1) prog -> func .
    (2) prog -> func . prog
    (1) prog -> . func
    (2) prog -> . func prog
    (3) func -> . type var LPAREN flist RPAREN LBRACE body RBRACE
    (43) type -> . LIST_LABEL
    (44) type -> . NUM_LABEL

    $end            reduce using rule 1 (prog -> func .)
    LIST_LABEL      shift and go to state 4
    NUM_LABEL       shift and go to state 5

    func                           shift and go to state 2
    prog                           shift and go to state 6
    type                           shift and go to state 3

state 3

    (3) func -> type . var LPAREN flist RPAREN LBRACE body RBRACE
    (46) var -> . VAR

    VAR             shift and go to state 8

    var                            shift and go to state 7

state 4

    (43) type -> LIST_LABEL .

    VAR             reduce using rule 43 (type -> LIST_LABEL .)


state 5

    (44) type -> NUM_LABEL .

    VAR             reduce using rule 44 (type -> NUM_LABEL .)


state 6

    (2) prog -> func prog .

    $end            reduce using rule 2 (prog -> func prog .)


state 7

    (3) func -> type var . LPAREN flist RPAREN LBRACE body RBRACE

    LPAREN          shift and go to state 9


state 8

    (46) var -> VAR .

    LPAREN          reduce using rule 46 (var -> VAR .)
    COMMA           reduce using rule 46 (var -> VAR .)
    RPAREN          reduce using rule 46 (var -> VAR .)
    SEMI_COLON      reduce using rule 46 (var -> VAR .)
    LSQUAREBR       reduce using rule 46 (var -> VAR .)
    EQ              reduce using rule 46 (var -> VAR .)
    PLUS            reduce using rule 46 (var -> VAR .)
    MINUS           reduce using rule 46 (var -> VAR .)
    TIMES           reduce using rule 46 (var -> VAR .)
    DIVIDE          reduce using rule 46 (var -> VAR .)
    MOD             reduce using rule 46 (var -> VAR .)
    LESS_THAN       reduce using rule 46 (var -> VAR .)
    GREATER_THAN    reduce using rule 46 (var -> VAR .)
    PARITY          reduce using rule 46 (var -> VAR .)
    NOT_EQ          reduce using rule 46 (var -> VAR .)
    LESS_EQUAL      reduce using rule 46 (var -> VAR .)
    GREATER_EQUAL   reduce using rule 46 (var -> VAR .)
    OR              reduce using rule 46 (var -> VAR .)
    AND             reduce using rule 46 (var -> VAR .)
    RSQUAREBR       reduce using rule 46 (var -> VAR .)
    IN              reduce using rule 46 (var -> VAR .)


state 9

    (3) func -> type var LPAREN . flist RPAREN LBRACE body RBRACE
    (37) flist -> . type var
    (38) flist -> . type var COMMA flist
    (39) flist -> .
    (43) type -> . LIST_LABEL
    (44) type -> . NUM_LABEL

    RPAREN          reduce using rule 39 (flist -> .)
    LIST_LABEL      shift and go to state 4
    NUM_LABEL       shift and go to state 5

    type                           shift and go to state 10
    flist                          shift and go to state 11

state 10

    (37) flist -> type . var
    (38) flist -> type . var COMMA flist
    (46) var -> . VAR

    VAR             shift and go to state 8

    var                            shift and go to state 12

state 11

    (3) func -> type var LPAREN flist . RPAREN LBRACE body RBRACE

    RPAREN          shift and go to state 13


state 12

    (37) flist -> type var .
    (38) flist -> type var . COMMA flist

    RPAREN          reduce using rule 37 (flist -> type var .)
    COMMA           shift and go to state 14


state 13

    (3) func -> type var LPAREN flist RPAREN . LBRACE body RBRACE

    LBRACE          shift and go to state 15


state 14

    (38) flist -> type var COMMA . flist
    (37) flist -> . type var
    (38) flist -> . type var COMMA flist
    (39) flist -> .
    (43) type -> . LIST_LABEL
    (44) type -> . NUM_LABEL

    RPAREN          reduce using rule 39 (flist -> .)
    LIST_LABEL      shift and go to state 4
    NUM_LABEL       shift and go to state 5

    type                           shift and go to state 10
    flist                          shift and go to state 16

state 15

    (3) func -> type var LPAREN flist RPAREN LBRACE . body RBRACE
    (4) body -> . stmt
    (5) body -> . stmt body
    (6) stmt -> . expr SEMI_COLON
    (7) stmt -> . defvar SEMI_COLON
    (8) stmt -> . IF LPAREN expr RPAREN stmt
    (9) stmt -> . IF LPAREN expr RPAREN stmt ELSE stmt
    (10) stmt -> . WHILE LPAREN expr RPAREN stmt
    (11) stmt -> . FOR LPAREN var IN expr RPAREN stmt
    (12) stmt -> . RETURN expr SEMI_COLON
    (13) stmt -> . LBRACE body RBRACE
    (15) expr -> . var LPAREN clist RPAREN
    (16) expr -> . expr LSQUAREBR expr RSQUAREBR
    (17) expr -> . expr EQ expr
    (18) expr -> . expr PLUS expr
    (19) expr -> . expr MINUS expr
    (20) expr -> . expr TIMES expr
    (21) expr -> . expr DIVIDE expr
    (22) expr -> . expr MOD expr
    (23) expr -> . expr LESS_THAN expr
    (24) expr -> . expr GREATER_THAN expr
    (25) expr -> . expr PARITY expr
    (26) expr -> . expr NOT_EQ expr
    (27) expr -> . expr LESS_EQUAL expr
    (28) expr -> . expr GREATER_EQUAL expr
    (29) expr -> . expr OR expr
    (30) expr -> . expr AND expr
    (31) expr -> . NOT expr
    (32) expr -> . MINUS expr
    (33) expr -> . PLUS expr
    (34) expr -> . LPAREN expr RPAREN
    (35) expr -> . var
    (36) expr -> . num
    (14) defvar -> . type var
    (46) var -> . VAR
    (45) num -> . NUM
    (43) type -> . LIST_LABEL
    (44) type -> . NUM_LABEL

    IF              shift and go to state 25
    WHILE           shift and go to state 26
    FOR             shift and go to state 27
    RETURN          shift and go to state 28
    LBRACE          shift and go to state 20
    NOT             shift and go to state 31
    MINUS           shift and go to state 30
    PLUS            shift and go to state 29
    LPAREN          shift and go to state 19
    VAR             shift and go to state 8
    NUM             shift and go to state 33
    LIST_LABEL      shift and go to state 4
    NUM_LABEL       shift and go to state 5

    type                           shift and go to state 17
    var                            shift and go to state 18
    body                           shift and go to state 21
    stmt                           shift and go to state 22
    expr                           shift and go to state 23
    defvar                         shift and go to state 24
    num                            shift and go to state 32

state 16

    (38) flist -> type var COMMA flist .

    RPAREN          reduce using rule 38 (flist -> type var COMMA flist .)


state 17

    (14) defvar -> type . var
    (46) var -> . VAR

    VAR             shift and go to state 8

    var                            shift and go to state 34

state 18

    (15) expr -> var . LPAREN clist RPAREN
    (35) expr -> var .

    LPAREN          shift and go to state 35
    SEMI_COLON      reduce using rule 35 (expr -> var .)
    LSQUAREBR       reduce using rule 35 (expr -> var .)
    EQ              reduce using rule 35 (expr -> var .)
    PLUS            reduce using rule 35 (expr -> var .)
    MINUS           reduce using rule 35 (expr -> var .)
    TIMES           reduce using rule 35 (expr -> var .)
    DIVIDE          reduce using rule 35 (expr -> var .)
    MOD             reduce using rule 35 (expr -> var .)
    LESS_THAN       reduce using rule 35 (expr -> var .)
    GREATER_THAN    reduce using rule 35 (expr -> var .)
    PARITY          reduce using rule 35 (expr -> var .)
    NOT_EQ          reduce using rule 35 (expr -> var .)
    LESS_EQUAL      reduce using rule 35 (expr -> var .)
    GREATER_EQUAL   reduce using rule 35 (expr -> var .)
    OR              reduce using rule 35 (expr -> var .)
    AND             reduce using rule 35 (expr -> var .)
    RPAREN          reduce using rule 35 (expr -> var .)
    COMMA           reduce using rule 35 (expr -> var .)
    RSQUAREBR       reduce using rule 35 (expr -> var .)


state 19

    (34) expr -> LPAREN . expr RPAREN
    (15) expr -> . var LPAREN clist RPAREN
    (16) expr -> . expr LSQUAREBR expr RSQUAREBR
    (17) expr -> . expr EQ expr
    (18) expr -> . expr PLUS expr
    (19) expr -> . expr MINUS expr
    (20) expr -> . expr TIMES expr
    (21) expr -> . expr DIVIDE expr
    (22) expr -> . expr MOD expr
    (23) expr -> . expr LESS_THAN expr
    (24) expr -> . expr GREATER_THAN expr
    (25) expr -> . expr PARITY expr
    (26) expr -> . expr NOT_EQ expr
    (27) expr -> . expr LESS_EQUAL expr
    (28) expr -> . expr GREATER_EQUAL expr
    (29) expr -> . expr OR expr
    (30) expr -> . expr AND expr
    (31) expr -> . NOT expr
    (32) expr -> . MINUS expr
    (33) expr -> . PLUS expr
    (34) expr -> . LPAREN expr RPAREN
    (35) expr -> . var
    (36) expr -> . num
    (46) var -> . VAR
    (45) num -> . NUM

    NOT             shift and go to state 31
    MINUS           shift and go to state 30
    PLUS            shift and go to state 29
    LPAREN          shift and go to state 19
    VAR             shift and go to state 8
    NUM             shift and go to state 33

    expr                           shift and go to state 36
    var                            shift and go to state 18
    num                            shift and go to state 32

state 20

    (13) stmt -> LBRACE . body RBRACE
    (4) body -> . stmt
    (5) body -> . stmt body
    (6) stmt -> . expr SEMI_COLON
    (7) stmt -> . defvar SEMI_COLON
    (8) stmt -> . IF LPAREN expr RPAREN stmt
    (9) stmt -> . IF LPAREN expr RPAREN stmt ELSE stmt
    (10) stmt -> . WHILE LPAREN expr RPAREN stmt
    (11) stmt -> . FOR LPAREN var IN expr RPAREN stmt
    (12) stmt -> . RETURN expr SEMI_COLON
    (13) stmt -> . LBRACE body RBRACE
    (15) expr -> . var LPAREN clist RPAREN
    (16) expr -> . expr LSQUAREBR expr RSQUAREBR
    (17) expr -> . expr EQ expr
    (18) expr -> . expr PLUS expr
    (19) expr -> . expr MINUS expr
    (20) expr -> . expr TIMES expr
    (21) expr -> . expr DIVIDE expr
    (22) expr -> . expr MOD expr
    (23) expr -> . expr LESS_THAN expr
    (24) expr -> . expr GREATER_THAN expr
    (25) expr -> . expr PARITY expr
    (26) expr -> . expr NOT_EQ expr
    (27) expr -> . expr LESS_EQUAL expr
    (28) expr -> . expr GREATER_EQUAL expr
    (29) expr -> . expr OR expr
    (30) expr -> . expr AND expr
    (31) expr -> . NOT expr
    (32) expr -> . MINUS expr
    (33) expr -> . PLUS expr
    (34) expr -> . LPAREN expr RPAREN
    (35) expr -> . var
    (36) expr -> . num
    (14) defvar -> . type var
    (46) var -> . VAR
    (45) num -> . NUM
    (43) type -> . LIST_LABEL
    (44) type -> . NUM_LABEL

    IF              shift and go to state 25
    WHILE           shift and go to state 26
    FOR             shift and go to state 27
    RETURN          shift and go to state 28
    LBRACE          shift and go to state 20
    NOT             shift and go to state 31
    MINUS           shift and go to state 30
    PLUS            shift and go to state 29
    LPAREN          shift and go to state 19
    VAR             shift and go to state 8
    NUM             shift and go to state 33
    LIST_LABEL      shift and go to state 4
    NUM_LABEL       shift and go to state 5

    body                           shift and go to state 37
    stmt                           shift and go to state 22
    expr                           shift and go to state 23
    defvar                         shift and go to state 24
    var                            shift and go to state 18
    num                            shift and go to state 32
    type                           shift and go to state 17

state 21

    (3) func -> type var LPAREN flist RPAREN LBRACE body . RBRACE

    RBRACE          shift and go to state 38


state 22

    (4) body -> stmt .
    (5) body -> stmt . body
    (4) body -> . stmt
    (5) body -> . stmt body
    (6) stmt -> . expr SEMI_COLON
    (7) stmt -> . defvar SEMI_COLON
    (8) stmt -> . IF LPAREN expr RPAREN stmt
    (9) stmt -> . IF LPAREN expr RPAREN stmt ELSE stmt
    (10) stmt -> . WHILE LPAREN expr RPAREN stmt
    (11) stmt -> . FOR LPAREN var IN expr RPAREN stmt
    (12) stmt -> . RETURN expr SEMI_COLON
    (13) stmt -> . LBRACE body RBRACE
    (15) expr -> . var LPAREN clist RPAREN
    (16) expr -> . expr LSQUAREBR expr RSQUAREBR
    (17) expr -> . expr EQ expr
    (18) expr -> . expr PLUS expr
    (19) expr -> . expr MINUS expr
    (20) expr -> . expr TIMES expr
    (21) expr -> . expr DIVIDE expr
    (22) expr -> . expr MOD expr
    (23) expr -> . expr LESS_THAN expr
    (24) expr -> . expr GREATER_THAN expr
    (25) expr -> . expr PARITY expr
    (26) expr -> . expr NOT_EQ expr
    (27) expr -> . expr LESS_EQUAL expr
    (28) expr -> . expr GREATER_EQUAL expr
    (29) expr -> . expr OR expr
    (30) expr -> . expr AND expr
    (31) expr -> . NOT expr
    (32) expr -> . MINUS expr
    (33) expr -> . PLUS expr
    (34) expr -> . LPAREN expr RPAREN
    (35) expr -> . var
    (36) expr -> . num
    (14) defvar -> . type var
    (46) var -> . VAR
    (45) num -> . NUM
    (43) type -> . LIST_LABEL
    (44) type -> . NUM_LABEL

    RBRACE          reduce using rule 4 (body -> stmt .)
    IF              shift and go to state 25
    WHILE           shift and go to state 26
    FOR             shift and go to state 27
    RETURN          shift and go to state 28
    LBRACE          shift and go to state 20
    NOT             shift and go to state 31
    MINUS           shift and go to state 30
    PLUS            shift and go to state 29
    LPAREN          shift and go to state 19
    VAR             shift and go to state 8
    NUM             shift and go to state 33
    LIST_LABEL      shift and go to state 4
    NUM_LABEL       shift and go to state 5

    stmt                           shift and go to state 22
    body                           shift and go to state 39
    expr                           shift and go to state 23
    defvar                         shift and go to state 24
    var                            shift and go to state 18
    num                            shift and go to state 32
    type                           shift and go to state 17

state 23

    (6) stmt -> expr . SEMI_COLON
    (16) expr -> expr . LSQUAREBR expr RSQUAREBR
    (17) expr -> expr . EQ expr
    (18) expr -> expr . PLUS expr
    (19) expr -> expr . MINUS expr
    (20) expr -> expr . TIMES expr
    (21) expr -> expr . DIVIDE expr
    (22) expr -> expr . MOD expr
    (23) expr -> expr . LESS_THAN expr
    (24) expr -> expr . GREATER_THAN expr
    (25) expr -> expr . PARITY expr
    (26) expr -> expr . NOT_EQ expr
    (27) expr -> expr . LESS_EQUAL expr
    (28) expr -> expr . GREATER_EQUAL expr
    (29) expr -> expr . OR expr
    (30) expr -> expr . AND expr

    SEMI_COLON      shift and go to state 40
    LSQUAREBR       shift and go to state 41
    EQ              shift and go to state 42
    PLUS            shift and go to state 43
    MINUS           shift and go to state 44
    TIMES           shift and go to state 45
    DIVIDE          shift and go to state 46
    MOD             shift and go to state 47
    LESS_THAN       shift and go to state 48
    GREATER_THAN    shift and go to state 49
    PARITY          shift and go to state 50
    NOT_EQ          shift and go to state 51
    LESS_EQUAL      shift and go to state 52
    GREATER_EQUAL   shift and go to state 53
    OR              shift and go to state 54
    AND             shift and go to state 55


state 24

    (7) stmt -> defvar . SEMI_COLON

    SEMI_COLON      shift and go to state 56


state 25

    (8) stmt -> IF . LPAREN expr RPAREN stmt
    (9) stmt -> IF . LPAREN expr RPAREN stmt ELSE stmt

    LPAREN          shift and go to state 57


state 26

    (10) stmt -> WHILE . LPAREN expr RPAREN stmt

    LPAREN          shift and go to state 58


state 27

    (11) stmt -> FOR . LPAREN var IN expr RPAREN stmt

    LPAREN          shift and go to state 59


state 28

    (12) stmt -> RETURN . expr SEMI_COLON
    (15) expr -> . var LPAREN clist RPAREN
    (16) expr -> . expr LSQUAREBR expr RSQUAREBR
    (17) expr -> . expr EQ expr
    (18) expr -> . expr PLUS expr
    (19) expr -> . expr MINUS expr
    (20) expr -> . expr TIMES expr
    (21) expr -> . expr DIVIDE expr
    (22) expr -> . expr MOD expr
    (23) expr -> . expr LESS_THAN expr
    (24) expr -> . expr GREATER_THAN expr
    (25) expr -> . expr PARITY expr
    (26) expr -> . expr NOT_EQ expr
    (27) expr -> . expr LESS_EQUAL expr
    (28) expr -> . expr GREATER_EQUAL expr
    (29) expr -> . expr OR expr
    (30) expr -> . expr AND expr
    (31) expr -> . NOT expr
    (32) expr -> . MINUS expr
    (33) expr -> . PLUS expr
    (34) expr -> . LPAREN expr RPAREN
    (35) expr -> . var
    (36) expr -> . num
    (46) var -> . VAR
    (45) num -> . NUM

    NOT             shift and go to state 31
    MINUS           shift and go to state 30
    PLUS            shift and go to state 29
    LPAREN          shift and go to state 19
    VAR             shift and go to state 8
    NUM             shift and go to state 33

    expr                           shift and go to state 60
    var                            shift and go to state 18
    num                            shift and go to state 32

state 29

    (33) expr -> PLUS . expr
    (15) expr -> . var LPAREN clist RPAREN
    (16) expr -> . expr LSQUAREBR expr RSQUAREBR
    (17) expr -> . expr EQ expr
    (18) expr -> . expr PLUS expr
    (19) expr -> . expr MINUS expr
    (20) expr -> . expr TIMES expr
    (21) expr -> . expr DIVIDE expr
    (22) expr -> . expr MOD expr
    (23) expr -> . expr LESS_THAN expr
    (24) expr -> . expr GREATER_THAN expr
    (25) expr -> . expr PARITY expr
    (26) expr -> . expr NOT_EQ expr
    (27) expr -> . expr LESS_EQUAL expr
    (28) expr -> . expr GREATER_EQUAL expr
    (29) expr -> . expr OR expr
    (30) expr -> . expr AND expr
    (31) expr -> . NOT expr
    (32) expr -> . MINUS expr
    (33) expr -> . PLUS expr
    (34) expr -> . LPAREN expr RPAREN
    (35) expr -> . var
    (36) expr -> . num
    (46) var -> . VAR
    (45) num -> . NUM

    NOT             shift and go to state 31
    MINUS           shift and go to state 30
    PLUS            shift and go to state 29
    LPAREN          shift and go to state 19
    VAR             shift and go to state 8
    NUM             shift and go to state 33

    expr                           shift and go to state 61
    var                            shift and go to state 18
    num                            shift and go to state 32

state 30

    (32) expr -> MINUS . expr
    (15) expr -> . var LPAREN clist RPAREN
    (16) expr -> . expr LSQUAREBR expr RSQUAREBR
    (17) expr -> . expr EQ expr
    (18) expr -> . expr PLUS expr
    (19) expr -> . expr MINUS expr
    (20) expr -> . expr TIMES expr
    (21) expr -> . expr DIVIDE expr
    (22) expr -> . expr MOD expr
    (23) expr -> . expr LESS_THAN expr
    (24) expr -> . expr GREATER_THAN expr
    (25) expr -> . expr PARITY expr
    (26) expr -> . expr NOT_EQ expr
    (27) expr -> . expr LESS_EQUAL expr
    (28) expr -> . expr GREATER_EQUAL expr
    (29) expr -> . expr OR expr
    (30) expr -> . expr AND expr
    (31) expr -> . NOT expr
    (32) expr -> . MINUS expr
    (33) expr -> . PLUS expr
    (34) expr -> . LPAREN expr RPAREN
    (35) expr -> . var
    (36) expr -> . num
    (46) var -> . VAR
    (45) num -> . NUM

    NOT             shift and go to state 31
    MINUS           shift and go to state 30
    PLUS            shift and go to state 29
    LPAREN          shift and go to state 19
    VAR             shift and go to state 8
    NUM             shift and go to state 33

    expr                           shift and go to state 62
    var                            shift and go to state 18
    num                            shift and go to state 32

state 31

    (31) expr -> NOT . expr
    (15) expr -> . var LPAREN clist RPAREN
    (16) expr -> . expr LSQUAREBR expr RSQUAREBR
    (17) expr -> . expr EQ expr
    (18) expr -> . expr PLUS expr
    (19) expr -> . expr MINUS expr
    (20) expr -> . expr TIMES expr
    (21) expr -> . expr DIVIDE expr
    (22) expr -> . expr MOD expr
    (23) expr -> . expr LESS_THAN expr
    (24) expr -> . expr GREATER_THAN expr
    (25) expr -> . expr PARITY expr
    (26) expr -> . expr NOT_EQ expr
    (27) expr -> . expr LESS_EQUAL expr
    (28) expr -> . expr GREATER_EQUAL expr
    (29) expr -> . expr OR expr
    (30) expr -> . expr AND expr
    (31) expr -> . NOT expr
    (32) expr -> . MINUS expr
    (33) expr -> . PLUS expr
    (34) expr -> . LPAREN expr RPAREN
    (35) expr -> . var
    (36) expr -> . num
    (46) var -> . VAR
    (45) num -> . NUM

    NOT             shift and go to state 31
    MINUS           shift and go to state 30
    PLUS            shift and go to state 29
    LPAREN          shift and go to state 19
    VAR             shift and go to state 8
    NUM             shift and go to state 33

    expr                           shift and go to state 63
    var                            shift and go to state 18
    num                            shift and go to state 32

state 32

    (36) expr -> num .

    SEMI_COLON      reduce using rule 36 (expr -> num .)
    LSQUAREBR       reduce using rule 36 (expr -> num .)
    EQ              reduce using rule 36 (expr -> num .)
    PLUS            reduce using rule 36 (expr -> num .)
    MINUS           reduce using rule 36 (expr -> num .)
    TIMES           reduce using rule 36 (expr -> num .)
    DIVIDE          reduce using rule 36 (expr -> num .)
    MOD             reduce using rule 36 (expr -> num .)
    LESS_THAN       reduce using rule 36 (expr -> num .)
    GREATER_THAN    reduce using rule 36 (expr -> num .)
    PARITY          reduce using rule 36 (expr -> num .)
    NOT_EQ          reduce using rule 36 (expr -> num .)
    LESS_EQUAL      reduce using rule 36 (expr -> num .)
    GREATER_EQUAL   reduce using rule 36 (expr -> num .)
    OR              reduce using rule 36 (expr -> num .)
    AND             reduce using rule 36 (expr -> num .)
    RPAREN          reduce using rule 36 (expr -> num .)
    COMMA           reduce using rule 36 (expr -> num .)
    RSQUAREBR       reduce using rule 36 (expr -> num .)


state 33

    (45) num -> NUM .

    SEMI_COLON      reduce using rule 45 (num -> NUM .)
    LSQUAREBR       reduce using rule 45 (num -> NUM .)
    EQ              reduce using rule 45 (num -> NUM .)
    PLUS            reduce using rule 45 (num -> NUM .)
    MINUS           reduce using rule 45 (num -> NUM .)
    TIMES           reduce using rule 45 (num -> NUM .)
    DIVIDE          reduce using rule 45 (num -> NUM .)
    MOD             reduce using rule 45 (num -> NUM .)
    LESS_THAN       reduce using rule 45 (num -> NUM .)
    GREATER_THAN    reduce using rule 45 (num -> NUM .)
    PARITY          reduce using rule 45 (num -> NUM .)
    NOT_EQ          reduce using rule 45 (num -> NUM .)
    LESS_EQUAL      reduce using rule 45 (num -> NUM .)
    GREATER_EQUAL   reduce using rule 45 (num -> NUM .)
    OR              reduce using rule 45 (num -> NUM .)
    AND             reduce using rule 45 (num -> NUM .)
    RPAREN          reduce using rule 45 (num -> NUM .)
    COMMA           reduce using rule 45 (num -> NUM .)
    RSQUAREBR       reduce using rule 45 (num -> NUM .)


state 34

    (14) defvar -> type var .

    SEMI_COLON      reduce using rule 14 (defvar -> type var .)


state 35

    (15) expr -> var LPAREN . clist RPAREN
    (40) clist -> . expr
    (41) clist -> . expr COMMA clist
    (42) clist -> .
    (15) expr -> . var LPAREN clist RPAREN
    (16) expr -> . expr LSQUAREBR expr RSQUAREBR
    (17) expr -> . expr EQ expr
    (18) expr -> . expr PLUS expr
    (19) expr -> . expr MINUS expr
    (20) expr -> . expr TIMES expr
    (21) expr -> . expr DIVIDE expr
    (22) expr -> . expr MOD expr
    (23) expr -> . expr LESS_THAN expr
    (24) expr -> . expr GREATER_THAN expr
    (25) expr -> . expr PARITY expr
    (26) expr -> . expr NOT_EQ expr
    (27) expr -> . expr LESS_EQUAL expr
    (28) expr -> . expr GREATER_EQUAL expr
    (29) expr -> . expr OR expr
    (30) expr -> . expr AND expr
    (31) expr -> . NOT expr
    (32) expr -> . MINUS expr
    (33) expr -> . PLUS expr
    (34) expr -> . LPAREN expr RPAREN
    (35) expr -> . var
    (36) expr -> . num
    (46) var -> . VAR
    (45) num -> . NUM

    RPAREN          reduce using rule 42 (clist -> .)
    NOT             shift and go to state 31
    MINUS           shift and go to state 30
    PLUS            shift and go to state 29
    LPAREN          shift and go to state 19
    VAR             shift and go to state 8
    NUM             shift and go to state 33

    var                            shift and go to state 18
    clist                          shift and go to state 64
    expr                           shift and go to state 65
    num                            shift and go to state 32

state 36

    (34) expr -> LPAREN expr . RPAREN
    (16) expr -> expr . LSQUAREBR expr RSQUAREBR
    (17) expr -> expr . EQ expr
    (18) expr -> expr . PLUS expr
    (19) expr -> expr . MINUS expr
    (20) expr -> expr . TIMES expr
    (21) expr -> expr . DIVIDE expr
    (22) expr -> expr . MOD expr
    (23) expr -> expr . LESS_THAN expr
    (24) expr -> expr . GREATER_THAN expr
    (25) expr -> expr . PARITY expr
    (26) expr -> expr . NOT_EQ expr
    (27) expr -> expr . LESS_EQUAL expr
    (28) expr -> expr . GREATER_EQUAL expr
    (29) expr -> expr . OR expr
    (30) expr -> expr . AND expr

    RPAREN          shift and go to state 66
    LSQUAREBR       shift and go to state 41
    EQ              shift and go to state 42
    PLUS            shift and go to state 43
    MINUS           shift and go to state 44
    TIMES           shift and go to state 45
    DIVIDE          shift and go to state 46
    MOD             shift and go to state 47
    LESS_THAN       shift and go to state 48
    GREATER_THAN    shift and go to state 49
    PARITY          shift and go to state 50
    NOT_EQ          shift and go to state 51
    LESS_EQUAL      shift and go to state 52
    GREATER_EQUAL   shift and go to state 53
    OR              shift and go to state 54
    AND             shift and go to state 55


state 37

    (13) stmt -> LBRACE body . RBRACE

    RBRACE          shift and go to state 67


state 38

    (3) func -> type var LPAREN flist RPAREN LBRACE body RBRACE .

    LIST_LABEL      reduce using rule 3 (func -> type var LPAREN flist RPAREN LBRACE body RBRACE .)
    NUM_LABEL       reduce using rule 3 (func -> type var LPAREN flist RPAREN LBRACE body RBRACE .)
    $end            reduce using rule 3 (func -> type var LPAREN flist RPAREN LBRACE body RBRACE .)


state 39

    (5) body -> stmt body .

    RBRACE          reduce using rule 5 (body -> stmt body .)


state 40

    (6) stmt -> expr SEMI_COLON .

    IF              reduce using rule 6 (stmt -> expr SEMI_COLON .)
    WHILE           reduce using rule 6 (stmt -> expr SEMI_COLON .)
    FOR             reduce using rule 6 (stmt -> expr SEMI_COLON .)
    RETURN          reduce using rule 6 (stmt -> expr SEMI_COLON .)
    LBRACE          reduce using rule 6 (stmt -> expr SEMI_COLON .)
    NOT             reduce using rule 6 (stmt -> expr SEMI_COLON .)
    MINUS           reduce using rule 6 (stmt -> expr SEMI_COLON .)
    PLUS            reduce using rule 6 (stmt -> expr SEMI_COLON .)
    LPAREN          reduce using rule 6 (stmt -> expr SEMI_COLON .)
    VAR             reduce using rule 6 (stmt -> expr SEMI_COLON .)
    NUM             reduce using rule 6 (stmt -> expr SEMI_COLON .)
    LIST_LABEL      reduce using rule 6 (stmt -> expr SEMI_COLON .)
    NUM_LABEL       reduce using rule 6 (stmt -> expr SEMI_COLON .)
    RBRACE          reduce using rule 6 (stmt -> expr SEMI_COLON .)
    ELSE            reduce using rule 6 (stmt -> expr SEMI_COLON .)


state 41

    (16) expr -> expr LSQUAREBR . expr RSQUAREBR
    (15) expr -> . var LPAREN clist RPAREN
    (16) expr -> . expr LSQUAREBR expr RSQUAREBR
    (17) expr -> . expr EQ expr
    (18) expr -> . expr PLUS expr
    (19) expr -> . expr MINUS expr
    (20) expr -> . expr TIMES expr
    (21) expr -> . expr DIVIDE expr
    (22) expr -> . expr MOD expr
    (23) expr -> . expr LESS_THAN expr
    (24) expr -> . expr GREATER_THAN expr
    (25) expr -> . expr PARITY expr
    (26) expr -> . expr NOT_EQ expr
    (27) expr -> . expr LESS_EQUAL expr
    (28) expr -> . expr GREATER_EQUAL expr
    (29) expr -> . expr OR expr
    (30) expr -> . expr AND expr
    (31) expr -> . NOT expr
    (32) expr -> . MINUS expr
    (33) expr -> . PLUS expr
    (34) expr -> . LPAREN expr RPAREN
    (35) expr -> . var
    (36) expr -> . num
    (46) var -> . VAR
    (45) num -> . NUM
